Merge branch 'main' into feature/SOLR-17458